# actividad_integradora_2

./: CMakeLists.txt  LICENSE  input.txt  sonar-project.properties  team.txt
.github/workflows/: build.yml
include/: Coordinate.h  DisjointSet.h  Edge.h  GraphAlgorithms.h
src/: main.cpp
tests/: DisjointSet.cpp  Edge.cpp  GraphAlgorithms.cpp
